--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,7 +6,7 @@
     <title>My_custom_pr</title>
     <script id="sap-ui-bootstrap"
             src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-            data-sap-ui-theme="sap_fiori_3"
+            data-sap-ui-theme="sap_belize"
             data-sap-ui-resourceroots='{"com.tw.mypr.My_custom_pr": "./"}'
             data-sap-ui-compatVersion="edge"
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
