--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My_custom_pr</title>
     <script id="sap-ui-bootstrap"
-            src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+            src="https://sapui5.hana.ondemand.com/1.64.0/resources/sap-ui-core.js"
             data-sap-ui-theme="sap_belize"
             data-sap-ui-resourceroots='{"com.tw.mypr.My_custom_pr": "./"}'
             data-sap-ui-compatVersion="edge"
