--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My_custom_pr</title>
     <script id="sap-ui-bootstrap"
-            src="https://sapui5.hana.ondemand.com/1.72.0/resources/sap-ui-core.js"
-            data-sap-ui-theme="sap_fiori_3"
+            src="https://sapui5.hana.ondemand.com/1.64.0/resources/sap-ui-core.js"
+            data-sap-ui-theme="sap_belize"
             data-sap-ui-resourceroots='{"com.tw.mypr.My_custom_pr": "./"}'
             data-sap-ui-compatVersion="edge"
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
